dummy change to fix code merge issue for contributionAmountChange still in html

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -71,6 +71,8 @@
                       </div>
                     </ng-container>
                     <!-- [attr.readonly]="isReadOnly(col?.name, col.type)" -->
+                    <!-- Now coming from the backend -->
+                    <!-- (blur)="col?.name === 'contribution_amount' ? contributionAmountChange($event) : null" -->
                     <input
                       *ngIf="col?.name !== 'first_name' && col?.name !== 'last_name'"
                       class="form-control"
