--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -25,7 +25,7 @@
     class="form__container"
     [ngClass]="{
       'show-alerts': showValidateBar === true,
-      'hide-alerts': step === 'step_6'
+      'hide-alerts': step === 'step_5' || step === 'step_6'
     }"
   >
     <div class="form__steps" *ngIf="step !== 'financial_summary'">
