Fne 1251 sprint17 mahendra (#745)
* FNE-1254 changes

* FNE-1254 changes

* FNE-1254 changes

* FNE-1254 changes

* FNE-1254 changes

* FNE-1254 changes

* FNE-1064 change

* FNE-1251 changes

* FNE-1251 changes

* FNE-1251 changes

* FNE-1251 changes

* FNE-1251 change

* FNE-1251 change

* FNE-1251 change

--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -232,14 +232,14 @@
   </section>
   <footer>
         <div class="grid-row">
-            <div class="grid-row__col grid-row__col--4">
+            <div class="grid-row__col grid-row__col--12">
             <div class="forms__btn-container">
-                <button id="all_transactions" class="btn btn-previous btn-left" type="button" (click)="all_Transactions()">
-                    All Transactions
-                 </button>
-                 <button id="extended_summary" class="btn btn-previous btn-left" type="button" (click)="expanded_Summary()">
+                   <button id="extended_summary" class="btn btn-previous btn-right" type="button" (click)="expanded_Summary()">
                     Extended Summary
                   </button>
+                  <button id="all_transactions" class="btn btn-previous btn-right" type="button" (click)="all_Transactions()">
+                      All Transactions
+                   </button>
             </div>
             </div>
         </div>
