--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -71,8 +71,6 @@
                       </div>
                     </ng-container>
                     <!-- [attr.readonly]="isReadOnly(col?.name, col.type)" -->
-                    <!-- Now coming from the backend -->
-                    <!-- (blur)="col?.name === 'contribution_amount' ? contributionAmountChange($event) : null" -->
                     <input
                       *ngIf="col?.name !== 'first_name' && col?.name !== 'last_name'"
                       class="form-control"
@@ -219,6 +217,7 @@
                 </ng-container>
                 <ng-container *ngIf="col?.type === 'select' && col?.name === 'state'">
                   <ng-select
+                    (change)="handleStateChange($event)"
                     class="state-select"
                     [formControlName]="col?.name"
                     [ngClass]="
@@ -228,7 +227,7 @@
                         : ''
                     "
                   >
-                    <ng-option *ngFor="let item of states" [value]="item.code">
+                    <ng-option *ngFor="let item of states" [ngValue]="item">
                       {{ item.code }} - {{ item.name }}
                     </ng-option>
                   </ng-select>
