--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -1,16 +1,15 @@
 <div class="transactions__main-container">
   <div class="form__sidebar">
-      <transaction-sidebar
-        [hidden]="isShowFilters"
-        [step]="step"
-        title="Transaction Categories new"
-        [transactionCategories]="transactionCategories"
-        (status)="onNotify($event)">
-     </transaction-sidebar>
+    <transaction-sidebar
+      [hidden]="isShowFilters"
+      [step]="step"
+      title="Transaction Categories new"
+      [transactionCategories]="transactionCategories"
+      (status)="onNotify($event)"
+    >
+    </transaction-sidebar>
     <div class="transactions__sidebar_filters">
-      <app-transactions-filter [hidden]="!isShowFilters" 
-        title="Filters"
-        [formType]="formType">
+      <app-transactions-filter [hidden]="!isShowFilters" title="Filters" [formType]="formType">
       </app-transactions-filter>
     </div>
   </div>
@@ -18,18 +17,25 @@
     <header>
       <div class="header-content">
         <div class="float-left">
-          <h1 *ngIf="!isEditViewActive(); else editHeading">Transactions / Form {{formType}}
-            <span [@fadeInOut] *ngIf="isRecycleBinViewActive()"> / Recycling Bin
+          <h1 *ngIf="!isEditViewActive(); else editHeading">
+            Transactions / Form {{ formType }}
+            <span [@fadeInOut] *ngIf="isRecycleBinViewActive()">
+              / Recycling Bin
               <span class="trash-icon"></span>
             </span>
           </h1>
           <ng-template #editHeading>
-            <h1 [@fadeInOut] *ngIf="isEditViewActive()">Form {{formType}} / {{transactionToEdit.type}} / Edit</h1>
+            <h1 [@fadeInOut] *ngIf="isEditViewActive()">Form {{ formType }} / {{ transactionToEdit.type }} / Edit</h1>
           </ng-template>
         </div>
         <div class="float-right">
-          <button [@fadeInOut] *ngIf="isShowFilters" class="btn btn-primary btn-right" type="submit"
-            (click)="showCategories()">
+          <button
+            [@fadeInOut]
+            *ngIf="isShowFilters"
+            class="btn btn-primary btn-right"
+            type="submit"
+            (click)="showCategories()"
+          >
             Return to Transaction Categories
           </button>
         </div>
@@ -41,53 +47,91 @@
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
             <div class="transactions__btn-container">
-              <button [@fadeInOut] *ngIf="isTransactionViewActive()"
-                class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="showPinColumns()">
+              <button
+                [@fadeInOut]
+                *ngIf="isTransactionViewActive()"
+                class="btn btn-primary btn-left transactions__trx-btn"
+                type="button"
+                (click)="showPinColumns()"
+              >
                 <i class="thumbtack-icon"></i>
                 Pin Columns
               </button>
-              <button [@fadeInOut] *ngIf="isTransactionViewActive()"
-                class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="showRecycleBin()">
+              <button
+                [@fadeInOut]
+                *ngIf="isTransactionViewActive()"
+                class="btn btn-primary btn-left transactions__trx-btn"
+                type="button"
+                (click)="showRecycleBin()"
+              >
                 <i class="trash-icon"></i>
                 Recycle Bin
               </button>
-              <button [@fadeInOut] *ngIf="isTransactionViewActive()"
-                class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="doImport()">
+              <button
+                [@fadeInOut]
+                *ngIf="isTransactionViewActive()"
+                class="btn btn-primary btn-left transactions__trx-btn"
+                type="button"
+                (click)="doImport()"
+              >
                 <i class="file-import-icon"></i>
                 Import
               </button>
-              <button [@fadeInOut] *ngIf="isTransactionViewActive()"
-                class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="showFilters()">
+              <button
+                [@fadeInOut]
+                *ngIf="isTransactionViewActive()"
+                class="btn btn-primary btn-left transactions__trx-btn"
+                type="button"
+                (click)="showFilters()"
+              >
                 <i class="filter-icon"></i>
                 Filter
               </button>
-              <button [@fadeInOut] *ngIf="isRecycleBinViewActive()"
-                  class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="showTransactions()">
-                  <i class="table-icon"></i>
-                  Transactions
+              <button
+                [@fadeInOut]
+                *ngIf="isRecycleBinViewActive()"
+                class="btn btn-primary btn-left transactions__trx-btn"
+                type="button"
+                (click)="showTransactions()"
+              >
+                <i class="table-icon"></i>
+                Transactions
               </button>
-              <button [@fadeInOut] *ngIf="isRecycleBinViewActive()"
-                class="btn btn-primary btn-left transactions__trx-btn" type="button" (click)="showFilters()">
+              <button
+                [@fadeInOut]
+                *ngIf="isRecycleBinViewActive()"
+                class="btn btn-primary btn-left transactions__trx-btn"
+                type="button"
+                (click)="showFilters()"
+              >
                 <i class="filter-icon"></i>
                 Filter
-              </button>               
+              </button>
               <div class="input-group pl-0 transactions__trx-search">
-                <div class="input-group-append" (click)="clearSearchAndFilters()" 
-                    ngbTooltip="Clear Keywords and Filters" tooltipClass="form-tooltip">
+                <div
+                  class="input-group-append"
+                  (click)="clearSearchAndFilters()"
+                  ngbTooltip="Clear Keywords and Filters"
+                  tooltipClass="form-tooltip"
+                >
                   <span class="input-group-text" id="">
                     <i class="fas fa-eraser text-grey" aria-hidden="true"></i>
                   </span>
-                </div>                
-                <input class="form-control py-1" type="text" placeholder="Search All" 
-                  [(ngModel)]="searchText" aria-label="Search">
-                <div class="input-group-append" (click)="search()"
-                    ngbTooltip="Search All" tooltipClass="form-tooltip">
+                </div>
+                <input
+                  class="form-control py-1"
+                  type="text"
+                  placeholder="Search All"
+                  [(ngModel)]="searchText"
+                  aria-label="Search"
+                />
+                <div class="input-group-append" (click)="search()" ngbTooltip="Search All" tooltipClass="form-tooltip">
                   <span class="input-group-text" id="">
                     <!-- <i class="search-icon text-grey" aria-hidden="true"></i> no longer working?-->
                     <i class="fas fa-search text-grey" aria-hidden="true"></i>
                   </span>
                 </div>
-              </div>              
+              </div>
             </div>
           </div>
         </div>
@@ -95,41 +139,39 @@
           <div class="grid-row__col grid-row__col--12">
             <div class="transactions__btn-container">
               <div class="transactions__tag-outer-wrapper">
-                  <div id="button-container" class="transactions__tag_wrapper">
-                      <div *ngFor="let tag of tagArray">
-                        <div *ngIf="tag.group.length > 0" class="transactions__tag_group">
-                          <span *ngFor="let gTag of tag.group; let i = index">
-                            <button 
-                              class="btn transactions__tag_btn transactions__btn-search-filter"
-                              (click)="removeTag(tag.type, i, gTag)">
-                              <i class="fas fa-window-close transactions__close-tag"></i>
-                                <span *ngIf="tag.type !== 'amount' &&
-                                             tag.type !== 'aggregateAmount' && 
-                                             tag.type !== 'date'"
-                                >
-                                  <span *ngIf="tag.prefix">{{tag.prefix}}: </span>{{gTag}}
-                                </span>
-                                <span *ngIf="tag.type === 'date'">{{tag.prefix}}:
-                                    {{ gTag.filterDateFrom | date: 'MM/dd/yyyy'}} - 
-                                    {{ gTag.filterDateTo | date: 'MM/dd/yyyy'}}
-                                </span>                              
-                                <span *ngIf="tag.type === 'amount'">{{tag.prefix}}:
-                                    {{ gTag.filterAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
-                                    {{ gTag.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
-                                </span>
-                                <span *ngIf="tag.type === 'aggregateAmount'">{{tag.prefix}}:
-                                    {{ gTag.filterAggregateAmountMin | currency:'USD':'symbol-narrow':'1.2-2'}} - 
-                                    {{ gTag.filterAggregateAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
-                                </span>
-                            </button>
-                            <span class="transactions__btn-search-filter-join" 
-                              *ngIf="i < (tag.group.length -1 )">
-                                or
-                            </span>
+                <div id="button-container" class="transactions__tag_wrapper">
+                  <div *ngFor="let tag of tagArray">
+                    <div *ngIf="tag.group.length > 0" class="transactions__tag_group">
+                      <span *ngFor="let gTag of tag.group; let i = index">
+                        <button
+                          class="btn transactions__tag_btn transactions__btn-search-filter"
+                          (click)="removeTag(tag.type, i, gTag)"
+                        >
+                          <i class="fas fa-window-close transactions__close-tag"></i>
+                          <span *ngIf="tag.type !== 'amount' && tag.type !== 'aggregateAmount' && tag.type !== 'date'">
+                            <span *ngIf="tag.prefix">{{ tag.prefix }}: </span>{{ gTag }}
                           </span>
-                        </div>
-                      </div>
+                          <span *ngIf="tag.type === 'date'"
+                            >{{ tag.prefix }}: {{ gTag.filterDateFrom | date: 'MM/dd/yyyy' }} -
+                            {{ gTag.filterDateTo | date: 'MM/dd/yyyy' }}
+                          </span>
+                          <span *ngIf="tag.type === 'amount'"
+                            >{{ tag.prefix }}: {{ gTag.filterAmountMin | currency: 'USD':'symbol-narrow':'1.2-2' }} -
+                            {{ gTag.filterAmountMax | currency: 'USD':'symbol-narrow':'1.2-2' }}
+                          </span>
+                          <span *ngIf="tag.type === 'aggregateAmount'"
+                            >{{ tag.prefix }}:
+                            {{ gTag.filterAggregateAmountMin | currency: 'USD':'symbol-narrow':'1.2-2' }} -
+                            {{ gTag.filterAggregateAmountMax | currency: 'USD':'symbol-narrow':'1.2-2' }}
+                          </span>
+                        </button>
+                        <span class="transactions__btn-search-filter-join" *ngIf="i < tag.group.length - 1">
+                          or
+                        </span>
+                      </span>
+                    </div>
                   </div>
+                </div>
               </div>
 
               <!-- <br>
@@ -203,9 +245,8 @@
                     </button>
                   </div>                    
                 </div> -->
-                                
 
-                <!-- <div id="" class="transactions__tag_wrapper">
+              <!-- <div id="" class="transactions__tag_wrapper">
                   <span *ngFor="let categoryZ of filters.filterCategories; let i = index">
                     <button
                       class="btn transactions__tag_btn transactions__btn-search-filter"
@@ -220,7 +261,6 @@
                   </span>
                 </div>
               </div> -->
-
 
               <!-- <div *ngFor="let searchTextItem of searchTextArray; let i = index">
                 <div class="tag__category">
@@ -249,7 +289,6 @@
                     or
                 </span>
               </div> -->
-
 
               <!-- <div *ngIf="filters.filterDateFrom  && filters.filterDateTo">
                 <button
@@ -281,28 +320,37 @@
                           {{ filters.filterAmountMax | currency:'USD':'symbol-narrow':'1.2-2'}}
                 </button>
               </div>  -->
-            </div>          
+            </div>
           </div>
         </div>
       </div>
-      <app-transactions-table 
+      <app-transactions-table
         *ngIf="isTransactionViewActive()"
-        formType="{{formType}}" 
-        reportId="{{reportId}}"
-        tableType="{{transactionsView}}">
+        formType="{{ formType }}"
+        reportId="{{ reportId }}"
+        tableType="{{ transactionsView }}"
+      >
       </app-transactions-table>
       <app-transactions-table
         *ngIf="isRecycleBinViewActive()"
-        formType="{{formType}}"
-        reportId="{{reportId}}" 
-        tableType="{{recycleBinView}}">
+        formType="{{ formType }}"
+        reportId="{{ reportId }}"
+        tableType="{{ recycleBinView }}"
+      >
       </app-transactions-table>
       <app-transactions-edit
         *ngIf="isEditViewActive()"
         [transactionToEdit]="transactionToEdit"
-        formType="{{formType}}"
-        reportId="{{reportId}}">
+        formType="{{ formType }}"
+        reportId="{{ reportId }}"
+      >
       </app-transactions-edit>
     </div>
+  </div>
+
+  <div>
+    <button class="btn btn-previous btn-left" type="button" (click)="previousStep()">
+      Previous
+    </button>
   </div>
 </div>
