--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -1,18 +1,10 @@
 <div class="transactions__main-container">
-  <div class="form__sidebar">
-    <transaction-sidebar
-      [hidden]="isShowFilters"
-      [step]="step"
-      title="Transaction Categories new"
-      [transactionCategories]="transactionCategories"
-      (status)="onNotify($event)"
-    >
-    </transaction-sidebar>
+  <!-- div class="form__sidebar">
     <div class="transactions__sidebar_filters">
       <app-transactions-filter [hidden]="!isShowFilters" title="Filters" [formType]="formType">
-      </app-transactions-filter>
+      </app-transactioYesns-filter>
     </div>
-  </div>
+  </div-->
   <div class="transactions__container">
     <header>
       <div class="header-content">
