--- a/front-end/src/app/forms/transactions/transactions.component.html
+++ b/front-end/src/app/forms/transactions/transactions.component.html
@@ -341,7 +341,7 @@
   </div>
 
   <div>
-    <button class="btn btn-previous btn-left" type="button" (click)="previousStep()">
+    <button class="btn btn-previous btn-left" type="button" (click)="goToPreviousStep()">
       Previous
     </button>
   </div>
